# ParallelComputationExamples

./: .gitignore  CMakeLists.txt  README.md
CUDA/: CMakeLists.txt
CUDA/00-how-to-run-task-on-cluster/: main.cu  run.sh
CUDA/01-intro/: cuda_device.cu  test.cu
CUDA/01-intro/00-hello-world-single-thread/: main  main.cpp
CUDA/01-intro/01-hello-world-single-cuda-thread/: main  main.cu
CUDA/01-intro/02-add-threads/: main  main.cu
CUDA/01-intro/03-add-blocks/: main  main.cu
CUDA/01-intro/04-memcpy/: main  main.cu
CUDA/01-intro/05-matrix-multiplication-single/: main  main.cu
CUDA/02-device-specs-benchmarks/: cuda_device.cu
CUDA/02-device-specs-benchmarks/00-time-measurement/: main.cu
CUDA/02-device-specs-benchmarks/01-bandwidth-throughtput/: main.cu  readme.md
CUDA/02-device-specs-benchmarks/02-ilp/: main  main.cu
CUDA/02-device-specs-benchmarks/03-occupancy/: main.cu  run.sh
CUDA/03-memory-model/01-uncoalesced-access/: full_uncoalesce.cu  main.cu
CUDA/03-memory-model/02-shared/: global_example.cu  shared_example.cu
CUDA/03-memory-model/03-host-alloc-benchmarks/: main.cu
CUDA/03-memory-model/04-caching/: main.cu
CUDA/03-memory-model/05-pitching/: main.cu
CUDA/03-memory-model/09-zero-copy/: main.cu
CUDA/03-memory-model/10-bandwidth-comparison/: main.cu
CUDA/03.5-matrix-multiplication-example/: main.cu
CUDA/04-reduction/: .env  README.md  test.cu
CUDA/04-reduction/00-stupid-sum/: main.cu  normal_sum.cu  out.txt
CUDA/04-reduction/01-default-sum/: main.cu  main_without_shared_memory.cu
CUDA/04-reduction/02-another-math/: main.cu
CUDA/04-reduction/03-improving-bank-conflicts/: main.cu
CUDA/04-reduction/04-add-on-load/: main.cu
CUDA/04-reduction/05-warp-reduce/: main.cu
CUDA/04-reduction/06-warp-design-specific/: main.cu
CUDA/04-reduction/07-warp-reduce/: main.cu
CUDA/04.5-atomics/00-atomic-add/: main.cu  run.sh
CUDA/04.5-atomics/01-histogram-naive/: main.cu  run.sh
CUDA/04.5-atomics/02-histogram-privatized/: main.cu  run.sh
CUDA/04.7-warp-primitives/00-warp-shuffle/: main.cu  run.sh
CUDA/04.7-warp-primitives/01-warp-reduce/: main.cu  run.sh
CUDA/04.7-warp-primitives/02-warp-vote/: main.cu  run.sh
CUDA/05-scan/: 00-naive_scan.cu  01-naive_cuda_scan.cu  01.5-correct_cuda_scan.cu  01.75-recursive_cuda_scan.cu  02-two-layer-parallelism.cu  03-scan-bank-conflicts.cu  04-warp-scan.cu  04_correct_scan_parallelism.cu  05-scan_bank_conflicts.cu  README.md  correct_scan.cu  naive_cuda_scan.cu  naive_scan.cu
CUDA/06-cublas/: 01-vector-add.cu  02-vector-adding.cu  03-cosine-distance.cu  04-matrix-sums.cu
CUDA/07-pycuda/: 01-simple-ariphmetic.py
CUDA/08-streams-events/00-events-timing/: main.cu  run.sh
CUDA/08-streams-events/01-async-memcpy/: main.cu  run.sh
CUDA/08-streams-events/02-overlap-compute-copy/: main.cu  run.sh
CUDA/09-unified-memory/00-managed-basic/: main.cu  run.sh
CUDA/09-unified-memory/01-prefetch/: main.cu  run.sh
CUDA/10-cooperative-groups/00-warp-reduce-cg/: main.cu  run.sh
CUDA/11-cuda-graphs/00-stream-capture/: main.cu  run.sh
CUDA/11-cuda-graphs/01-explicit-graph/: main.cu  run.sh
CUDA/12-thrust/00-device-vector/: main.cu  run.sh
CUDA/12-thrust/01-transform-reduce/: main.cu  run.sh
CUDA/12-thrust/02-sort/: main.cu  run.sh
CUDA/13-curand/00-monte-carlo-host-api/: main.cu  run.sh
CUDA/13-curand/01-monte-carlo-device-api/: main.cu  run.sh
CUDA/14-multi-gpu/00-independent-devices/: main.cu  run.sh
CUDA/14-multi-gpu/01-peer-access/: main.cu  run.sh
CUDA/15-tensor-cores/00-wmma-16x16/: main.cu  run.sh
CUDA/15-tensor-cores/01-wmma-tiled/: main.cu  run.sh
CUDA/16-dynamic-parallelism/00-child-launch/: main.cu  run.sh
CUDA/17-cufft/00-roundtrip/: main.cu  run.sh
CUDA/18-cusparse/00-spmv/: main.cu  run.sh
CUDA/19-profiling-tools/00-nvtx-ranges/: main.cu  profile.sh
CUDA/tasks/: 01-2021-add-library.md  01-random-calculation.md  02-matrix-multiplication.md  03-quick-sort.md
HadoopStackExamples/Cassandra/: README.md  (+1 more)
MPI/: CMakeLists.txt  README.md
MPI/00-hello-world/: main.cpp
MPI/01-send_recv/: CMakeLists.txt  main.cpp
MPI/02-ping-pong/: CMakeLists.txt  main.cpp
MPI/03-probe-message-status/: CMakeLists.txt  main.cpp  probe.cpp
MPI/04-isend-irecv/: CMakeLists.txt  main.cpp
MPI/05-bcast/: CMakeLists.txt  main.cpp
MPI/06-scatter-gather/: CMakeLists.txt  main.cpp
MPI/07-reduce-allreduce/: CMakeLists.txt  main.cpp
MPI/08-alltoall/: CMakeLists.txt  main.cpp
MPI/09-collective-benchmark/: CMakeLists.txt  main.cpp
MPI/10-comm-split/: CMakeLists.txt  main.cpp
MPI/11-comm-dup/: CMakeLists.txt  main.cpp
MPI/12-comm-group/: CMakeLists.txt  main.cpp
MPI/13-comm-cart/: CMakeLists.txt  main.cpp
OpenCL/: CMakeLists.txt
OpenCL/00-platform-device-info/: main.cpp  run.sh
OpenCL/01-intro/01-vector-add/: main.cpp  run.sh
OpenCL/02-local-memory/00-transpose/: main.cpp  run.sh
OpenCL/03-reduction/: main.cpp  run.sh
OpenCL/04-matrix-multiplication/: main.cpp  run.sh
OpenCL/05-profiling-events/: main.cpp  run.sh
OpenCL/06-image-objects/: main.cpp  run.sh
OpenCL/07-multi-queue/: main.cpp  run.sh
OpenCL/08-coalesced-access/: main.cpp  run.sh
OpenCL/09-constant-memory/: main.cpp  run.sh
OpenCL/10-pinned-memory/: main.cpp  run.sh
OpenCL/11-stencil/: main.cpp  run.sh
OpenCL/12-atomics/: main.cpp  run.sh
OpenCL/13-scan/: main.cpp  run.sh
OpenCL/14-kernel-from-file/: main.cpp  run.sh  square.cl
OpenCL/16-offline-compilation/: main.cpp  run.sh
OpenCL/17-sub-groups/: main.cpp  run.sh
OpenCL/18-svm/: main.cpp  run.sh
OpenCL/19-multi-device/: main.cpp  run.sh
OpenCL/20-pyopencl/: run.sh  vector_add.py
OpenMP/: CMakeLists.txt
OpenMP/00-hello-world/: CMakeLists.txt  main.cpp
OpenMP/01-parallel-for/: CMakeLists.txt  main.cpp
OpenMP/02-sections/: CMakeLists.txt  main.cpp
OpenMP/03-master/: CMakeLists.txt  main.cpp
OpenMP/04-parralel-sum/: CMakeLists.txt  main.cpp
OpenMP/05-matrix-multiplication/: CMakeLists.txt  main.cpp
OpenMP/06-critical-sections/: CMakeLists.txt  main.cpp  main_atomic.cpp  main_critical.cpp  main_local_atomic.cpp
(+27 files in other folders)
